# BucketedSceneFlowEval

./: .devcontainer.json  .gitignore  README.md  build.sh  launch.sh  launch_av2.sh  o3d_raw_vis_demo.py  pyproject.toml  scene_trajectory_benchmark
.github/workflows/: python_install.yml
bucketed_scene_flow_eval/datasets/: __init__.py
bucketed_scene_flow_eval/datastructures/: __init__.py  camera_projection.py  dataclasses.py  line_mesh.py  o3d_visualizer.py  pointcloud.py  pyvis_visualizer.py  rgb_image.py  scene_sequence.py  se2.py  se3.py
bucketed_scene_flow_eval/eval/: __init__.py  base_per_frame_sceneflow_eval.py  bucketed_epe.py  eval.py  per_class_raw_epe.py  per_class_scaled_epe.py  per_class_threeway_epe.py  plot_eval_results.py  threeway_epe.py
bucketed_scene_flow_eval/interfaces/: __init__.py  abstract_dataset.py  abstract_sequence_loader.py  base_dataset_abstract_seq_loader.py
bucketed_scene_flow_eval/scripts/: av2_eval.py  zeroflow_eval.py
bucketed_scene_flow_eval/utils/: __init__.py  glfw_key_ids.py  loaders.py
data_prep_scripts/argo/: count_boxes.py  create_gt_flow.py  create_symlink_tree.py  duplicate_without_annotations.py  plot_boxes.py
data_prep_scripts/nuscenes/: create_gt_flow.py  visualize_nuscenes.py
docker/: Dockerfile  Dockerfileav2  Dockerfilewaymo
docs/: AV2_EVAL_FORMAT.md  DATASTRUCTURES.md  GETTING_STARTED.md
flow_lab/: annotation_saver.py  av2_count_sequence_length.py  av2_small_sequence_length.json  flow_lab.py  vis_classes.py
scripts/: av2_eval.py  demo.py  demo_3d.py  demo_rgb.py  nuscenes_visualize.py  zeroflow_eval.py
tests/: integration_tests.py  integration_tests.sh  setup.sh
(+44 files in other folders)
