[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.*",
  "/docker",
  "/scripts",
  "/docs",
  "/data_prep_scripts",
  "/launch.sh",
  "/README.md",
]

[project]
name = "bucketed_scene_flow_eval"
version = "1.0.5"
authors = [
  { name="Kyle Vedder", email="kvedder@seas.upenn.edu" },
]
description = "Bucketed Scene Flow Evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "iopath",
  "fvcore",
  "pandas",
  "opencv-python",
  "pyquaternion",
  "open3d",
  "pyarrow",
  "pytest",
  "nuscenes-devkit"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
